force-app/main/default/objects/Bucket_Fund__c/Bucket_Fund__c.object-meta.xml
<CustomObject>
    <label>Bucket Fund</label>
    <nameField>
        <displayFormat>Bucket-{0000}</displayFormat>
        <label>Bucket Fund Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bucket Funds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>