force-app/main/default/objects/Bucket_Fund__c/fields/Amount_Used__c.field-meta.xml
<CustomField>
    <fullName>Amount_Used__c</fullName>
    <formula>0 -  Sum_of_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Used</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>