force-app/main/default/objects/Bucket_Fund__c/fields/Opportunity_Product__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Product</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Bucket Fund</relationshipLabel>
    <relationshipName>Bucket_Fund</relationshipName>
    <type>Lookup</type>
</CustomField>