force-app/main/default/objects/Bucket_Fund__c/fields/Purchased_Amount__c.field-meta.xml
<CustomField>
    <fullName>Purchased_Amount__c</fullName>
    <label>Purchased Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>