force-app/main/default/objects/Bucket_Fund__c/fields/Starting_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Starting_Schedule__c</fullName>
    <formula
  >HYPERLINK(&quot;/lightning/r/&quot; &amp; Schedule_Id__c &amp; &quot;/view&quot;, &quot;View Schedule&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Starting Schedule</label>
    <type>Text</type>
</CustomField>