force-app/main/default/objects/Bucket_Fund__c/fields/Sum_of_Amount__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Amount__c</fullName>
    <label>Sum of Amount</label>
    <summarizedField>Bucket_Fund_Line_Item__c.Amount__c</summarizedField>
    <summaryForeignKey
  >Bucket_Fund_Line_Item__c.Bucket_Fund__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>